Revision history for {{$dist->name}}

{{$NEXT}}

0.01000011 2010-11-04 04:01:43 Pacific/Auckland
          Returns a Zilla instance if no magic is performed.
          More documentation.
          Default behaviour on a death.
          Pass plugin to find_plugin callbacks
    
0.01000004 2010-11-03 21:28:59 Pacific/Auckland
          Refactored to actually work -_-

0.01000001 2010-11-03 18:02:07 Pacific/Auckland
          First version.
