@@ -1,6 +1,9 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+          Fix ns::ac problems.
+          Add possible solve for Builder() not existing.
+          Add some tests.
 
 0.01000011 2010-11-04 04:01:43 Pacific/Auckland
           Returns a Zilla instance if no magic is performed.
